--- a/src/index.css
+++ b/src/index.css
@@ -66,11 +66,16 @@
   --tooltip-offset: var(--space-2);
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   background-color: var(--color-background);
   color: var(--color-text-primary);
   font-family: var(--font-primary);
   margin: 0;
+  overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
